--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <nav class="post-index-nav" aria-label="Post navigation">
-  <a class="post-index-link" href="{{ '/' | relative_url }}">← Back to index</a>
+  <a class="post-index-link" href="https://github.com/areu01or00/Tensor-Slayer.github.io">← GitHub project</a>
 </nav>
 
 {{ content }}
