nuke layout and redesign

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
-<nav class="post-index-nav" aria-label="Post navigation">
-  <a class="post-index-link" href="https://github.com/areu01or00/Tensor-Slayer.github.io">← GitHub project</a>
+<nav class="post-nav" aria-label="Post navigation">
+  <a href="https://github.com/areu01or00/Tensor-Slayer.github.io">← GitHub project</a>
 </nav>
 
-{{ content }}
+<article>
+  {{ content }}
+</article>
