--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <nav class="post-nav" aria-label="Post navigation">
-  <a href="https://github.com/areu01or00/Tensor-Slayer.github.io">← GitHub project</a>
+  <a href="{{ '/' | relative_url }}">← Back to index</a>
 </nav>
 
 <article>
