--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% seo %}
   </head>
   <body>
+    <!-- build: {{ site.github.build_revision | default: site.time }} -->
     <div class="site">
       {{ content }}
     </div>
