--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+---
+layout: default
+---
+
 <nav class="post-nav" aria-label="Post navigation">
   <a href="{{ '/' | relative_url }}">← Back to index</a>
 </nav>
